@@ -1,0 +1,44 @@
+<!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN' 'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'>			
+<html xmlns='http://www.w3.org/1999/xhtml' lang='ca'>
+    <head>
+        <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
+        <title>Servei no disponible</title>
+        <style type='text/css'>
+            body {		
+                margin: 0;
+                background: #eee;
+                font-family: sans-serif;
+                line-height: 1.5;
+                color: #444;
+            }
+            div {
+                width: 40em;
+                min-height: 80px;
+                padding: 1em;
+                margin: 2em auto;
+                border: 1px solid #ddd;
+                background: white;
+            }
+            p {
+                margin: 1em;
+            }
+            img {
+                float: left;
+                margin: 0 2em 0 1em;
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+            <img alt="Generalitat de Catalunya - Departament d'Ensenyament" src="http://educacio.gencat.cat/img/noma/logo.gif" />
+            <br />
+            <br />
+            <p>
+                El servei a qu&egrave; intenteu accedir est&agrave; temporalment fora de servei. Estem treballant per solucionar el problema al m&eacute;s aviat possible. Si us plau proveu d'accedir-hi m&eacute;s tard.
+                <br /> 
+                <br />
+                Disculpeu les mol&egrave;sties.
+            </p>
+        </div>
+    </body>
+</html>
